# Multimodal-AI-Agent-in-Cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: audio.h
src/: CMakeLists.txt  main.cpp
src/audio/: audio.cpp
src/llm/: llmmodule.cpp  llmmodule.h
src/vision/: coco_labels.h  visionmodule.cpp  visionmodule.h
